VOD-3213-UI alignment fix
git-svn-id: https://svn.penske.com/svn/ecomm/webprojects/suppliermgmt/suppliermgmt/branches/dev@76784 1dbbddac-570e-0410-aece-e783461d2649

--- a/WebContent/css/admin-console/oem-build-matrix/production-slot-results.css
+++ b/WebContent/css/admin-console/oem-build-matrix/production-slot-results.css
@@ -8,7 +8,7 @@
 }
 
 .Filter-div {
-  margin-left: 50px;
+    margin-left: 3px;
 }
 
 .width-75 {
@@ -33,4 +33,10 @@ color: #FFFFFF !important;
 
 .hideOption{
 	display:none !important;
+}
+#order-column{
+	width: 80px;
+}
+#slot-search{
+	width: 110px;
 }
